--- a/ui/css/index.css
+++ b/ui/css/index.css
@@ -534,6 +534,10 @@ a:link, a:visited {
     font-size: 0.66rem;
 }
 
+.no-m p{
+  margin: 0;
+}
+
 button {
     border: 1px solid transparent;
     padding: 0.375rem 0.75rem;
