Disable SetAvatarURL temporarily (app locks up otherwise)
* Discard @anonymous account

* Make youtube_key in `config.toml` optional

--- a/templates/index/index-user.html
+++ b/templates/index/index-user.html
@@ -59,7 +59,7 @@
               <div class="">
                 Your feed looks a bit empty.
               </div>
-              <div class="mt3 tc">
+              <div class="mt3 tc index-explore-spaces">
                 <button class="">Explore Spaces</button>
               </div>
             </div>
