--- a/templates/header/header.html
+++ b/templates/header/header.html
@@ -4,15 +4,10 @@
   <div class="header-block {{if .FullHeader}}mx-w-100{{end}}">
     <div class="logo">
       <a href="/">
-      {{template "logo"}}
+        {{template "logo"}}
       </a>
     </div>
     <div class="spacer flex ml4">
-      {{if eq .Name "index"}}
-      <div class="gr-center small">
-        <a href="/about"><span class=""><u>About</u></span></a>
-      </div>
-      {{end}}
     </div>
     <div class="tools flex">
       {{if .Page.LoggedInUser}}
@@ -33,16 +28,23 @@
           {{end}}
         </div>
       {{else}}
-      <div class="gr-default">
-        <a class="gr-center" href="/login">
-          <span class="gr-center small">Log In</span>
-        </a>
-      </div>
-      <div class="gr-default ml3">
-        <a class="gr-center" href="/signup">
-          <button>Signup</button>
-        </a>
-      </div>
+        {{if ne .Name "index"}}
+        <div class="gr-default">
+          <a class="gr-center" href="/login">
+            <span class="gr-center small">Log In</span>
+          </a>
+        </div>
+        <div class="gr-default ml3">
+          <a class="gr-center" href="/signup">
+            <button>Signup</button>
+          </a>
+        </div>
+        {{end}}
+        {{if eq .Name "index"}}
+        <div class="gr-center small">
+          <a href="/about"><span class=""><u>About</u></span></a>
+        </div>
+        {{end}}
       {{end}}
     </div>
   </div>
