Overflow fix for article pages.

--- a/templates/article/article.html
+++ b/templates/article/article.html
@@ -12,12 +12,15 @@
     {{end}}
     {{template "common-head" .}}
 
-  <style>
+<style>
+body {
+  overflow-y: scroll;
+}
 .article {
   min-height: 100vh;
   display: grid;
 }
-  </style>
+</style>
 
   </head>
   <body>
