--- a/templates/index/index.html
+++ b/templates/index/index.html
@@ -34,7 +34,7 @@
               </div>
             </div>
             <div class="mt4 flex gr-center">
-              <a href="/public"><span class="small o-80"><u>View Public Feed</u></span></a>
+              <a href="/public"><span class="small"><u>View Public Feed</u></span></a>
             </div>
 
           </div>
