Use new path for MSC2946

--- a/templates/index/index.html
+++ b/templates/index/index.html
@@ -19,7 +19,7 @@
             <div class="f2 bold">
               Hummingbard 
             </div>
-            <div class="mt3 f4 bold tc">Decentralized Communities For The Future</div>
+            <div class="mt3 f4 bold tc lh-copy">Decentralized Communities For The Future</div>
 
             <div class="mt4 flex gr-center ">
               <div class="">
