Sub-space navigation tweak.

--- a/templates/timeline/timeline.html
+++ b/templates/timeline/timeline.html
@@ -395,6 +395,7 @@
                 {{end}}
                 alias: {{.Room.Alias}},
                 profile: {{.IsUserProfile}},
+                federated: {{.IsFederated}},
                 initialPosts: JSON.parse({{.InitialPosts}}),
                 end: {{.LastEvent}},
                 owner: {{.IsOwner}},
