--- a/ui/css/index.css
+++ b/ui/css/index.css
@@ -602,6 +602,23 @@ button[class="small"] {
   padding: 0.125rem 0.5rem;
 }
 
+button[class="warn"] {
+    color: var(--white);
+    background: var(--primary);
+    padding: 0.375rem 0.75rem;
+    line-height: 1;
+    border-radius: 17px;
+    cursor: pointer;
+    font-size: 0.8rem;
+    font-weight: bold;
+    white-space: nowrap;
+    transition: 0.1s;
+}
+
+button[class="warn"]:disabled {
+  opacity: 0.5;
+}
+
 input:focus, textarea:focus, select:focus, div:focus, button:focus, video:focus, audio:focus {
     outline: none;
 }
