--- a/templates/gallery/gallery.html
+++ b/templates/gallery/gallery.html
@@ -5,6 +5,7 @@
     {{template "common-head" .}}
   </head>
   <body>
+    {{template "dark-mode" Map "Nonce" .Nonce "LoggedInUser" .LoggedInUser}}
     <div class="base {{if .LoggedInUser}}base-l{{end}}">
       {{if .LoggedInUser}}
       {{template "nav" Map "Page" .}}
