--- a/templates/index/index.html
+++ b/templates/index/index.html
@@ -7,6 +7,7 @@
 
   </head>
   <body>
+    {{template "dark-mode" Map "Nonce" .Nonce "LoggedInUser" .LoggedInUser}}
     <div class="root">
       {{template "header" Map "Page" . "Name" "index"}}
 
@@ -34,7 +35,7 @@
               </div>
             </div>
             <div class="mt4 flex gr-center">
-              <a href="/public"><span class="small"><u>View Public Feed</u></span></a>
+              <a href="/public"><span class="fs-09"><u>View Public Feed</u></span></a>
             </div>
 
           </div>
