--- a/templates/public/public.html
+++ b/templates/public/public.html
@@ -7,6 +7,7 @@
 
   </head>
   <body>
+    {{template "dark-mode" Map "Nonce" .Nonce "LoggedInUser" .LoggedInUser}}
     <div class="base {{if .LoggedInUser}}base-l{{end}}">
       {{if .LoggedInUser}}
       {{template "nav" Map "Page" .}}
