--- a/ui/css/index.css
+++ b/ui/css/index.css
@@ -54,7 +54,7 @@
   --primary-kinda-gray: #cccccc94;
   --primary-light-gray: #4b4b4b;
   --primary-lightest-gray: #262626;
-  --primary-lightestest-gray: #f6f6f6;
+  --primary-lightestest-gray: #262626;
   --primary-text: #ebebeb;
   --primary-link: #ebebeb;
   --light-text: #777;
@@ -674,7 +674,8 @@ input, textarea {
   border: 1px solid var(--primary-gray);
   padding: 0.5rem;
   border-radius: 5px;
-  width: 100%;
+  background: var(--m-bg);
+  color: var(--text);
 }
 
 input:focus, textarea:focus {
@@ -1218,6 +1219,11 @@ pre::-webkit-scrollbar-thumb {
 .col-c {
   display: grid;
   grid-template-rows: [meta] auto [content] 1fr;
+}
+
+.dark-mode {
+  transition: 0.1s;
+  fill: var(--primary-darkest);
 }
 
 @media screen and (max-width: 768px) {
