--- a/templates/dark-mode/dark-mode.html
+++ b/templates/dark-mode/dark-mode.html
@@ -1,7 +1,8 @@
 {{define "dark-mode"}}
 <script nonce={{.Nonce}}>
   let isDark = localStorage.getItem('dark_mode')
-  if(isDark && isDark == 'true') {
+  let prefDark = window.matchMedia('(prefers-color-scheme: dark)').matches
+  if((isDark && isDark == 'true') || (prefDark && (isDark && isDark != 'false'))) {
     document.documentElement.classList.add('dark')
   }
   {{if .LoggedInUser}}
