Dark mode preferences in sessions.

--- a/templates/dark-mode/dark-mode.html
+++ b/templates/dark-mode/dark-mode.html
@@ -1,16 +1,17 @@
 {{define "dark-mode"}}
 <script nonce={{.Nonce}}>
-  let isDark = localStorage.getItem('dark_mode')
-  let prefDark = window.matchMedia('(prefers-color-scheme: dark)').matches
-  if((isDark && isDark == 'true') || (prefDark && (!isDark || isDark != 'false'))) {
-    document.documentElement.classList.add('dark')
-  }
   {{if .LoggedInUser}}
-  {{if .LoggedInUser.Preferences}}
-    {{if .LoggedInUser.Preferences.DarkMode}}
-      document.documentElement.classList.add('dark')
+    {{if .LoggedInUser.Preferences}}
+      {{if .LoggedInUser.Preferences.DarkMode}}
+        document.documentElement.classList.add('dark')
+      {{end}}
     {{end}}
-  {{end}}
+  {{else}}
+    let isDark = localStorage.getItem('dark_mode')
+    let prefDark = window.matchMedia('(prefers-color-scheme: dark)').matches
+    if((isDark && isDark == 'true') || (prefDark && (!isDark || isDark != 'false'))) {
+      document.documentElement.classList.add('dark')
+    }
   {{end}}
 </script>
 {{end}}
