--- a/templates/timeline/timeline.html
+++ b/templates/timeline/timeline.html
@@ -420,6 +420,7 @@
         </div>
         {{template "state" .}}
         <script defer nonce={{.Nonce}} src="{{ InsertJS "timeline" }}"></script>
+        <script defer nonce={{.Nonce}} src="{{ InsertJS "chat" }}"></script>
 
       </div>
     </div>
