Remove WIP hydrogen chat element.

--- a/templates/article/article.html
+++ b/templates/article/article.html
@@ -157,7 +157,7 @@ body {
               {{$depth := .Depth}}
 
               <div class="replies gr-default brd mb5">
-                <div class="lds-ring gr-center"><div></div><div></div><div></div><div></div></div>
+                <div class="lds-ring gr-center pv5"><div></div><div></div><div></div><div></div></div>
               </div>
 
 
