Fix missing session max-age.

--- a/templates/index/index.html
+++ b/templates/index/index.html
@@ -1,7 +1,7 @@
 {{define "index"}}
 <html>
   <head>
-    <title>Hummingbard - Matrix-powered communities</title>
+    <title>Hummingbard - Decentralized communities for the future</title>
       <meta name="description" content="Matrix-powered communities.">
     {{template "common-head" .}}
 
