--- a/templates/timeline/timeline-event.html
+++ b/templates/timeline/timeline-event.html
@@ -118,15 +118,21 @@ id="{{.Event.ShortID}}">
         {{end}}
       </div>
       <div class="post-tools flex">
+          {{if and .LoggedInUser .IsMember}}
+              <div class="react ml3"
+                data-id="{{.Event.ID}}">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16"><path fill-rule="evenodd" d="M1.5 8a6.5 6.5 0 1113 0 6.5 6.5 0 01-13 0zM8 0a8 8 0 100 16A8 8 0 008 0zM5 8a1 1 0 100-2 1 1 0 000 2zm7-1a1 1 0 11-2 0 1 1 0 012 0zM5.32 9.636a.75.75 0 011.038.175l.007.009c.103.118.22.222.35.31.264.178.683.37 1.285.37.602 0 1.02-.192 1.285-.371.13-.088.247-.192.35-.31l.007-.008a.75.75 0 111.222.87l-.614-.431c.614.43.614.431.613.431v.001l-.001.002-.002.003-.005.007-.014.019a1.984 1.984 0 01-.184.213c-.16.166-.338.316-.53.445-.63.418-1.37.638-2.127.629-.946 0-1.652-.308-2.126-.63a3.32 3.32 0 01-.715-.657l-.014-.02-.005-.006-.002-.003v-.002h-.001l.613-.432-.614.43a.75.75 0 01.183-1.044h.001z"></path></svg>
+              </div>
+          {{end}}
           {{if and (not .PermalinkedPost) (not .UserFeed)}}
-              <div class="perma-link pointer ml3">
+              <div class="perma-link ml3">
                   <a class="" href="/{{$evid}}">
                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16"><path fill-rule="evenodd" d="M10.604 1h4.146a.25.25 0 01.25.25v4.146a.25.25 0 01-.427.177L13.03 4.03 9.28 7.78a.75.75 0 01-1.06-1.06l3.75-3.75-1.543-1.543A.25.25 0 0110.604 1zM3.75 2A1.75 1.75 0 002 3.75v8.5c0 .966.784 1.75 1.75 1.75h8.5A1.75 1.75 0 0014 12.25v-3.5a.75.75 0 00-1.5 0v3.5a.25.25 0 01-.25.25h-8.5a.25.25 0 01-.25-.25v-8.5a.25.25 0 01.25-.25h3.5a.75.75 0 000-1.5h-3.5z"></path></svg>
                   </a>
               </div>
           {{end}}
           {{if .UserFeed}}
-              <div class="perma-link pointer ml3">
+              <div class="perma-link ml3">
                   <a class="" href="/{{index .Event.Content "room_path"}}/{{index .Event.ID}}">
                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16"><path fill-rule="evenodd" d="M10.604 1h4.146a.25.25 0 01.25.25v4.146a.25.25 0 01-.427.177L13.03 4.03 9.28 7.78a.75.75 0 01-1.06-1.06l3.75-3.75-1.543-1.543A.25.25 0 0110.604 1zM3.75 2A1.75 1.75 0 002 3.75v8.5c0 .966.784 1.75 1.75 1.75h8.5A1.75 1.75 0 0014 12.25v-3.5a.75.75 0 00-1.5 0v3.5a.25.25 0 01-.25.25h-8.5a.25.25 0 01-.25-.25v-8.5a.25.25 0 01.25-.25h3.5a.75.75 0 000-1.5h-3.5z"></path></svg>
                   </a>
@@ -359,7 +365,6 @@ id="{{.Event.ShortID}}">
       {{$att := index .Event.Content "attachments"}}
       {{if or $lnk $img $att}}{{$mrg = true}}{{end}}
 
-      {{if gt .Event.TotalReplies 0}}
       <div class="{{if $mrg}}mt3{{end}}">
           {{if .UserFeed}}
           <a class="" href="/{{index .Event.Content "room_path"}}/{{index .Event.ID}}">
@@ -368,10 +373,16 @@ id="{{.Event.ShortID}}">
               {{end}}
               {{$rep := "Reply"}}
               {{if gt .Event.TotalReplies 1}}{{$rep = "Replies"}}{{end}}
-              <span class="small primary hov-un">{{.Event.TotalReplies}} {{$rep}}</span>
+
+              {{if gt .Event.TotalReplies 0}}
+                <span class="small primary hov-un">{{.Event.TotalReplies}} {{$rep}}</span>
+              {{else}}
+                {{if not .PermalinkedPost}}
+                  <span class="small primary hov-un">Reply</span>
+                {{end}}
+              {{end}}
           </a>
       </div>
-      {{end}}
 
       </div>
 
