Param for showing All room messages (including IM). Emoji reaction skeleton. Various.

--- a/templates/timeline/timeline.html
+++ b/templates/timeline/timeline.html
@@ -408,6 +408,7 @@
                 room_path: {{.Room.Path}},
                 children: {{.Room.Children}},
                 pages: {{.Room.Pages}},
+                showAll: {{.ShowAll}}
               }
               let homeserverURL = {{.HomeServerURL}}
             </script>
