--- a/ui/css/tippy.css
+++ b/ui/css/tippy.css
@@ -19,6 +19,10 @@
     box-shadow: 0 10px 70px rgba(0,0,0,.14);
 }
 
+.tippy-box[data-theme~='dark'] {
+    box-shadow: 0 10px 70px rgba(0,0,0,.14);
+}
+
 .tippy-box[data-theme~='pop'] {
     border-radius: 13px;
     box-shadow: 0 0px 50px rgba(0,0,0,.05);
