--- a/ui/css/index.css
+++ b/ui/css/index.css
@@ -1242,6 +1242,14 @@ pre::-webkit-scrollbar-thumb {
   fill: var(--primary-darkest);
 }
 
+.stars svg{
+}
+
+.ico-20 {
+    width: 20px;
+    height: 20px;
+}
+
 @media screen and (max-width: 768px) {
 .post-content {
   font-size: 0.9rem;
