Tweak border-radius

--- a/templates/timeline/timeline-event.html
+++ b/templates/timeline/timeline-event.html
@@ -299,7 +299,7 @@ id="{{.Event.ShortID}}">
 
           {{if index .Event.Content "com.hummingbard.review"}}
           {{$rev := index .Event.Content "com.hummingbard.review"}}
-          <div class="brd pa3 flex flex-column fs-09 mb3">
+          <div class="link-item pa3 flex flex-column fs-09 mb3">
             <div class="">
               <strong>{{index $rev "title"}}</strong>
             </div>
